--- a/ProjectHKII-Website/src/sass/components/products.scss
+++ b/ProjectHKII-Website/src/sass/components/products.scss
@@ -74,6 +74,7 @@ section.product-content {
         display: block;
     }
     .wrapper-product {
+        margin-bottom: 3rem;
         .tab-content {
             animation: fadeEffect 1s;
             -webkit-animation: fadeEffect 1s;
