--- a/ProjectHKII-Website/src/view/pages/index.pug
+++ b/ProjectHKII-Website/src/view/pages/index.pug
@@ -3,5 +3,6 @@ block main-content
     //- Huu
     block products
         include ../patials/products.pug
-    block icon-box
-        include ../patials/icon-box.pug
+    block gallery-supplier
+        include ../patials/gallery-supplier.pug
+
