--- a/ProjectHKII-Website/src/sass/_typography.scss
+++ b/ProjectHKII-Website/src/sass/_typography.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Kanit:400,500,700|Maven+Pro:400,500,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap');
 
 html, body{
     width: 100%;
