--- a/ProjectHKII-Website/src/sass/components/footer.scss
+++ b/ProjectHKII-Website/src/sass/components/footer.scss
@@ -4,6 +4,7 @@
         width: 100%;
         height: 3px;
         background-color: #262626;
+        margin-top: 3rem;
     }
     .footer-content {
         padding-top: 4rem;
@@ -285,5 +286,46 @@
                 }
             }
         }
+    }
+}
+
+#backtoTop {
+    position: fixed;
+    bottom: 20px;
+	right: 46px;
+    cursor: pointer;
+    min-width: 1.5rem;
+    border: 2px solid #000;
+    border-radius: 50%;
+    width: 4rem;
+    height: 4rem;
+    transition: all .3s ease;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    -ms-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    &:hover {
+        border-color: #ff0000;
+        background-color: #ff0000;
+        i {
+            color: #fff;
+        }
+    }
+    i {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        font-size: 1.2rem;
+        color: #000;
+        transition: all .3s ease;
+        -webkit-transition: all .3s ease;
+        -moz-transition: all .3s ease;
+        -ms-transition: all .3s ease;
+        -o-transition: all .3s ease;
     }
 }
