--- a/ProjectHKII-Website/src/view/layouts/layout-other-pages.pug
+++ b/ProjectHKII-Website/src/view/layouts/layout-other-pages.pug
@@ -34,6 +34,7 @@ html(lang="en")
         script(type="text/javascript" src="../../js/product-detail.js")
         script(type="text/javascript" src="../../js/category-detail.js")
         script(type="text/javascript" src="../../js/product.js")
+        script(type="text/javascript" src="../../js/back-to-top.js")
         script(type="text/javascript" src="../../js/index.js")
         script(type="text/javascript" src="../../js/payment.js")
 
