--- a/ProjectHKII-Website/src/view/layouts/layout.pug
+++ b/ProjectHKII-Website/src/view/layouts/layout.pug
@@ -33,6 +33,8 @@ html(lang="en")
         script(src="../../js/owl-carousel.js")
         //- Website JS
         script(type="text/javascript" src="../../js/navigation.js")
+        script(type="text/javascript" src="../../js/product-detail.js")
         script(type="text/javascript" src="../../js/product.js")
+        script(type="text/javascript" src="../../js/back-to-top.js")
         script(type="text/javascript" src="../../js/index.js")
 
