--- a/ProjectHKII-Website/src/sass/components/products.scss
+++ b/ProjectHKII-Website/src/sass/components/products.scss
@@ -82,7 +82,6 @@ section.product-content {
             .row {
                 .product-item {
                     padding: 0 .98rem 1.96rem;
-                    width: 20%;
                     &:hover {
                         img {
                             transform: scale(1.1);
@@ -152,4 +151,20 @@ section.product-content {
             }
         }
     }
+}
+
+@media (min-width: 768px) {
+    .product-item {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 20% !important;
+        flex: 0 0 20% !important;
+        max-width: 20%;
+    }
+}
+
+.w-20 {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 20% !important;
+    flex: 0 0 20% !important;
+    max-width: 20%;
 }
