add page account

--- a/ProjectHKII-Website/src/sass/_components.scss
+++ b/ProjectHKII-Website/src/sass/_components.scss
@@ -6,6 +6,6 @@
 @import 'components/category-detail.scss';
 @import 'components/cart.scss';
 @import 'components/payment.scss';
-
+@import 'components/account.scss';
 
 
