--- a/ProjectHKII-Website/src/sass/components/product-detail.scss
+++ b/ProjectHKII-Website/src/sass/components/product-detail.scss
@@ -79,11 +79,12 @@
     }
     .productDetail {
         padding: 4rem 0;
-        .nav-item::selection {
-            border-top: 2px solid rgb(250, 50, 100)
+        .nav-link {
+            border: 0.1rem solid rgb(225, 225, 255);
+            border-bottom: none;
         }
         .tab-content {
-            border: 0.5px solid rgba(100, 100, 100, 0.25);
+            border: 0.1rem solid rgba(100, 100, 100, 0.25);
             border-top: none;
             .description, .evaluation {
                 padding: 2.5rem 5rem;
