--- a/ProjectHKII-Website/src/sass/_components.scss
+++ b/ProjectHKII-Website/src/sass/_components.scss
@@ -7,5 +7,5 @@
 @import 'components/cart.scss';
 @import 'components/payment.scss';
 @import 'components/account.scss';
-
+@import 'components/user-edit.scss';
 
