--- a/ProjectHKII-Website/src/sass/components/account.scss
+++ b/ProjectHKII-Website/src/sass/components/account.scss
@@ -3,8 +3,7 @@
     margin: 0 auto;
     padding: 4rem 0;
     .nav-item {
-        width: 50%;
-
+        width: 50%
     }
     .nav-link {
         border: 0.1rem solid rgb(225, 225, 255);
